syntax = "proto3";

package clutch.aws.dynamodb.v1;

option go_package = "github.com/lyft/clutch/backend/api/aws/dynamodb/v1;ddbv1";

import "google/api/annotations.proto";
import "validate/validate.proto";

import "api/v1/annotations.proto";

service DDBAPI {
  rpc DescribeTable(DescribeTableRequest) returns (DescribeTableResponse) {
    option (google.api.http) = {
      post : "/v1/aws/dynamodb/describeTable"
      body : "*"
    };
    option (clutch.api.v1.action).type = READ;
  }

  rpc UpdateCapacity(UpdateCapacityRequest) returns (UpdateCapacityResponse) {
    option (google.api.http) = {
      post : "/v1/aws/dynamodb/updateCapacity"
      body : "*"
    };
    option (clutch.api.v1.action).type = UPDATE;
  }
}

message Table {
  option (clutch.api.v1.id).patterns = {
    type_url : "clutch.aws.dynamodb.v1.Table",
    pattern : "{region}/{name}"
  };

  // https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_TableDescription.html
  enum TableStatus {
    // Unspecified status indicates the table status could not be found.
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    CREATING = 2;
    UPDATING = 3;
    DELETING = 4;
    ACTIVE = 5;
    INACCESSIBLE_ENCRYPTION_CREDENTIALS = 6;
    ARCHIVING = 7;
    ARCHIVED = 8;
  }

  string name = 1;
  string region = 2;
  repeated GlobalSecondaryIndex global_secondary_indexes = 3;
  Throughput provisioned_throughput = 4;
  TableStatus status = 5;
}

// Represents the current GSI state
message GlobalSecondaryIndex {
  enum IndexStatus {
    // Unspecified indicates GSI status could not be found.
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    CREATING = 2;
    UPDATING = 3;
    DELETING = 4;
    ACTIVE = 5;
  }
  string name = 1;
  Throughput provisioned_throughput = 2;
  IndexStatus status = 3;
}

// Represents an Update action on a GSI, which changes the provisioned capacity.
message GlobalSecondaryIndexUpdate {
  string name = 1;
  Throughput target_index_throughput = 2;
}

message Throughput {
  int64 write_capacity_units = 1;
  int64 read_capacity_units = 2;
}

message DescribeTableRequest {
  string table_name = 1 [ (validate.rules).string = {min_bytes : 1} ];
  string region = 2 [ (validate.rules).string = {min_bytes : 1} ];
}

message DescribeTableResponse {
  option (clutch.api.v1.reference).fields = "table";

  Table table = 1;
}

message UpdateCapacityRequest {
  string table_name = 1 [ (validate.rules).string = {min_bytes : 1} ];
  string region = 2 [ (validate.rules).string = {min_bytes : 1} ];
  Throughput target_table_throughput = 3;
  repeated GlobalSecondaryIndexUpdate gsi_updates = 4;
}

message UpdateCapacityResponse {
  option (clutch.api.v1.reference).fields = "table";

  Table table = 1;
}
